@@ -1,8 +1,8 @@
 Package: rmongodb
 Type: Package
 Title: R-MongoDB driver
-Version: 1.3.0
-Date: 2013-11-26
+Version: 1.3.1
+Date: 2013-12-13
 Depends: R (>= 2.10), RJSONIO
 Author: Gerald Lindsly & MongoDB, Inc. (mongo-c-driver) & Markus Schmidberger (mongosoup.de)
 Maintainer: Markus Schmidberger <markus@mongosoup.de>
