@@ -79,6 +79,7 @@ export(mongo.cursor.to.list)
 export(mongo.cursor.value)
 export(mongo.destroy)
 export(mongo.disconnect)
+export(mongo.distinct)
 export(mongo.drop)
 export(mongo.drop.database)
 export(mongo.find)
@@ -104,6 +105,7 @@ export(mongo.get.server.err)
 export(mongo.get.server.err.string)
 export(mongo.get.socket)
 export(mongo.get.timeout)
+export(mongo.get.values)
 export(mongo.gridfile.destroy)
 export(mongo.gridfile.get.chunk)
 export(mongo.gridfile.get.chunk.count)
